--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/protfoliosite/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <meta name="description" content="This is nettem sarath , a web developer who loves and experiment with Tech" />
+    <meta name=”robots” content="index, follow" />
+    <title>sarath</title>
     <script type="module" crossorigin src="/protfoliosite/assets/index.3e2eaaef.js"></script>
     <link rel="stylesheet" href="/protfoliosite/assets/index.67b7ca8d.css">
   </head>
