--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/protfoliosite/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
@@ -14,8 +14,8 @@
     />
     <meta name="”robots”" content="index, follow" />
     <title>sarath</title>
-    <script type="module" crossorigin src="/protfoliosite/assets/index.ea280cd1.js"></script>
-    <link rel="stylesheet" href="/protfoliosite/assets/index.5a16a537.css">
+    <script type="module" crossorigin src="/assets/index.663f8cd5.js"></script>
+    <link rel="stylesheet" href="/assets/index.5a16a537.css">
   </head>
   <body>
     <div id="root"></div>
